--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 </div>
 </nav>
 <section class="about-gallary-section">
-	<h2>About Us</h2>
+	<h2>ABOUT US</h2>
 	<p>Home  /  About Us</p>
 </section>
 
