--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 </nav>
 <section class="about-gallary-section">
 	<h2>ABOUT US</h2>
-	<p>Home  /  About Us</p>
+	<p>HOME  /  ABOUT US</p>
 </section>
 
 
